# docs/swagger.yaml
@@ -493,6 +493,10 @@ definitions:
       name:
         description: 账本名称
         type: string
+      share_code:
+        type: string
+      share_code_time:
+        type: string
       tags:
         description: 标签
         items:
@@ -511,6 +515,20 @@ definitions:
         items:
           $ref: '#/definitions/system.User'
         type: array
+    type: object
+  ledger.MemberStatisticsData:
+    properties:
+      amount:
+        description: 成员金额
+        type: number
+      date:
+        type: string
+      member_id:
+        description: 成员ID
+        type: string
+      name:
+        description: 成员名称
+        type: string
     type: object
   ledger.MoneyBudget:
     properties:
@@ -1740,6 +1758,73 @@ paths:
       summary: 获取账本详情
       tags:
       - ledger
+  /ledger/invite:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 邮箱
+        in: query
+        name: email
+        required: true
+        type: string
+      - description: 账本ID
+        in: query
+        name: ledger_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.Response'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  $ref: '#/definitions/ledger.Ledger'
+                msg:
+                  type: string
+                success:
+                  type: boolean
+              type: object
+      summary: 邀请加入账本
+      tags:
+      - ledger
+  /ledger/join:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 分享码
+        in: query
+        name: share_code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.Response'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  $ref: '#/definitions/ledger.Ledger'
+                msg:
+                  type: string
+                success:
+                  type: boolean
+              type: object
+      summary: 加入账本
+      tags:
+      - ledger
   /ledger/list:
     get:
       consumes:
@@ -1765,6 +1850,37 @@ paths:
                   type: boolean
               type: object
       summary: 获取账本列表
+      tags:
+      - ledger
+  /ledger/share:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 账本ID
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.Response'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  $ref: '#/definitions/ledger.Ledger'
+                msg:
+                  type: string
+                success:
+                  type: boolean
+              type: object
+      summary: 分享账本
       tags:
       - ledger
   /ledger/statistics/calendar:
@@ -1950,6 +2066,60 @@ paths:
                   type: boolean
               type: object
       summary: 获取收支统计
+      tags:
+      - statistics
+  /ledger/statistics/member:
+    get:
+      consumes:
+      - application/json
+      description: 获取成员统计
+      parameters:
+      - description: 账本ID
+        in: query
+        name: ledger_id
+        required: true
+        type: string
+      - description: 开始时间
+        in: query
+        name: start_time
+        required: true
+        type: string
+      - description: 结束时间
+        in: query
+        name: end_time
+        required: true
+        type: string
+      - description: 类型
+        in: query
+        name: type
+        required: true
+        type: string
+      - description: 是否按年统计
+        in: query
+        name: is_year
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.Response'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  items:
+                    $ref: '#/definitions/ledger.MemberStatisticsData'
+                  type: array
+                msg:
+                  type: string
+                success:
+                  type: boolean
+              type: object
+      summary: 获取成员统计
       tags:
       - statistics
   /ledger/tag/create:
